--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.wjs.root</groupId>
+        <artifactId>root</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+    </parent>
+    <name>file</name>
+    <description>file module file</description>
+    <modules>
+        <module>file-api</module>
+        <module>file-common</module>
+        <module>file-domain</module>
+        <module>file-rpt</module>
+        <module>file-service</module>
+        <module>file-war-inrpc</module>
+    </modules>
 
     <groupId>com.wjs.file</groupId>
     <artifactId>file</artifactId>
     <version>1.1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
+    <repositories>
+        <repository>
+            <id>repository.jboss.org-public</id>
+            <name>JBoss repository</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
 
+    <properties>
+        <version.common>1.1.0-SNAPSHOT</version.common>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.wjs.common</groupId>
+                <artifactId>common-base</artifactId>
+                <version>${version.common}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wjs.common</groupId>
+                <artifactId>common-orm</artifactId>
+                <version>${version.common}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <!--<scm>
+        <connection>
+            scm:svn:http://192.168.228.232:88/svn/wjs/trunk/file
+        </connection>
+        <developerConnection>
+            scm:svn:http://192.168.228.232:88/svn/wjs/trunk/file
+        </developerConnection>
+    </scm>-->
+    <build>
+        <plugins>
+            <!--<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <tagBase>http://192.168.228.232:88/svn/wjs/tags/file</tagBase>
+                </configuration>
+            </plugin>-->
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
