--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,13 @@
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <repositories>
+    <!--<repositories>
         <repository>
             <id>repository.jboss.org-public</id>
             <name>JBoss repository</name>
             <url>https://repository.jboss.org/nexus/content/groups/public</url>
         </repository>
-    </repositories>
+    </repositories>-->
 
     <properties>
         <version.common>1.1.0-SNAPSHOT</version.common>
